--- a/impar-par/calcular.html
+++ b/impar-par/calcular.html
@@ -5,29 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>É impar ou é Par??</title>
 </head>
-
-<body>
-
-    <body class="body-index">
-        <header>
-            <nav>
-                <a href="index.html">Home|</a>
-                <a href="calcular.html">Impar Ou Par|</a>
-                <a href="sistemaPecas.html">Peças|</a>
-            </nav>
-        </header>
-
-
-        <body>
-            <h1>Imprimir Números de 1 a 100</h1>
-            <ul id="numeros"></ul>
+<body class="body-index">
+    <header>
+        <nav>
+            <a href="../index.html">Home|</a>
+            <a href="../impar-par/calcular.html">Impar Ou Par|</a>
+            <a href="../sistemaDasPecas/nomePeca.html">Nome-Peças|</a>
+            <a href="../sistemaDasPecas/pesoPeca.html">Peso-Peças|</a>
+            <a href="../sistemaDasPecas/quantidadePeca.html">Quant.-Peças|</a>
+        </nav>
+    </header>
 
 
-            <script src="javaScript/scriptCalcular.js">
-            </script>
-        </body>
+    <h1>Imprimir Números de 1 a 100</h1>
+    <ul id="numeros"></ul>
+
+
+    <script src="javaScript/scriptCalcular.js">
+    </script>
+</body>
 
 </html>
