--- a/sistemaDasPecas/pesoPeca.html
+++ b/sistemaDasPecas/pesoPeca.html
@@ -5,32 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sistema de Peças - PESO</title>
 </head>
+<body class="body-index">
+    <header>
+        <nav>
+            <a href="../index.html">Home|</a>
+            <a href="../impar-par/calcular.html">Impar Ou Par|</a>
+            <a href="../sistemaDasPecas/nomePeca.html">Nome-Peças|</a>
+            <a href="../sistemaDasPecas/pesoPeca.html">Peso-Peças|</a>
+            <a href="../sistemaDasPecas/quantidadePeca.html">Quant.-Peças|</a>
+        </nav>
+    </header>
 
-<body>
+    <fieldset>
+        <input type="text" placeholder="Peso da Peça" id="peso">
 
-    <body>
+        <button onclick="enviarPeso()" class="botao">Enviar
+        </button>
 
-        <body class="body-index">
-            <header>
-                <nav>
-                    <a href="index.html">Home|</a>
-                    <a href="calcular.html">Impar Ou Par|</a>
-                    <a href="sistemaDePecas.html">Peças|</a>
-                </nav>
-            </header>
-
-            <fieldset>
-                <input type="text" placeholder="Peso da Peça" id="peso">
-
-                <button onclick="enviarPeso()" class="botao">Enviar
-                </button>
-
-            </fieldset>
+    </fieldset>
 
 
-            <script src="javaScript/scriptPeso.js"></script>
-        </body>
+    <script src="javaScript/scriptPeso.js"></script>
+</body>
 
 </html>
